--- a/config/rules.html
+++ b/config/rules.html
@@ -5,6 +5,8 @@
 	<h2>Primary Policies</h2>
 	<br />
 		<ol>
+		<dt>Lugnut doesn't give a fuck - listen to sord213, unless he's being a dickbag, then get pictures and report to Lugnut.</dt>
+		<br>
 		<dt>0. Admins may disregard any of these rules at their discretion when they feel its in the best interest of the current round/server/playerbase at large. They will, of course, be fully accountable for their actions should they choose to exercise this privilege.</dt>
 		<br>
 		<dt>1.We’re all here to have a good time. If you’re intentionally trying to ruin everyone else’s good time, you won’t have a place here. Being a jerk in-character is fine to a point, but being a jerk out of character is not welcome at all. </dt>
